--- a/src/pug/components/banner.pug
+++ b/src/pug/components/banner.pug
@@ -1,13 +1,3 @@
-include /components/image.pug
-
-mixin scrolldown
-  #scroll-down
-    button.btn.btn-hover
-      .btn-layout
-        .icon-btn
-          +icon("expand_more").icon
-        .btn-content Scroll Down
-
 mixin banner(value = {})
   - let { content, title, image, mode = "hero" } = value;
 
@@ -20,4 +10,4 @@ mixin banner(value = {})
         header.content
           h1(itemprop="headline")= title
           h2.style-off-blue(itemprop="description")!= content
-        +scrolldown
+        +scroll-down
