--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,53 +1,34 @@
-mixin footer(value = {})
-  - let _class = value.class;
-  - let noSocials = value.noSocials || false;
-  footer.footer(data-container)
-    .container-lg.py-10.style-font-weight-bold.style-font-bold.style-spaceout-small.transition-fade.footer-layout(class=_class)
-      div
-        span.action-btn.action-btn-pointer-default(title="Copyright")
-          .action-btn-group
-            span.action-btn-spacer
-            +icon("copyright").action-icon
-            span.action-btn-section
-              span.action-btn-spacer
-              span 2021
-              span  Joseph Ojo
-              span.action-btn-spacer
-      div
-        //- if !debug
-        span(itemscope itemtype="https://schema.org/SiteNavigationElement")
-          +link({
-            href: "/sitemap",
-            class: "ml-mini",
-          })(itemprop="url" title="The Joseph Ojo sitemap.")
-            span(itemprop="name") Sitemap
-        if !noSocials
-          span= " - "
-        if !noSocials
-          +link({
-            href: "https://www.linkedin.com/in/o-josephojo/",
-            class: "ml-mini",
-            content: "LinkedIn"
-          })(target="_blank" rel="noopener" title="My LinkedIn page.")
-          span= " - "
-          +link({
-            href: "https://github.com/josephojo",
-            class: "ml-mini",
-            content: "Github"
-          })(target="_blank" rel="noopener" title="The official Joseph Ojo github link.")
-          span= " - "
-          span(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
-            +link({
-              href: "mailto:laoluojo@gmail.com",
-              class: "ml-mini",
-              content: "Email"
-            })(target="_blank" rel="noopener" itemprop="email" title="An email you can contact me with.")
-      div
-        span
-          span Designed by
-          span=" "
-          span(itemprop="author")
-            +link({
-              href: "https://github.com/okikio",
-              content: "Okiki Ojo"
-            })(target="_blank" rel="noopener" title="The github link to the Web Developer who designed this site, Okiki Ojo.")
+mixin footer
+  .footer
+    .container
+      #copyright
+        +icon("copyright").icon
+        |  2021 Joseph Ojo
+
+      #social-links
+        +link({
+          href: "/sitemap",
+          content: "Sitemap"
+        })
+        |  - 
+        +link({
+          href: "https://www.linkedin.com/in/o-josephojo/",
+          content: "LinkedIn"
+        })(target="_blank" rel="noopener")
+        |  - 
+        +link({
+          href: "https://github.com/josephojo",
+          content: "Github"
+        })(target="_blank" rel="noopener")
+        |  - 
+        +link({
+          href: "mailto:laoluojo@gmail.com",
+          content: "Email"
+        })(target="_blank" rel="noopener")
+
+      #design-by
+        | Designed by 
+        +link({
+          href: "https://github.com/okikio",
+          content: "Okiki Ojo"
+        })(target="_blank" rel="noopener")
