--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -4,7 +4,7 @@ include /components/banner.pug
 include /components/column.pug
 include /components/navbar.pug
 include /components/footer.pug
-include /components/back-to-top.pug
+include /components/buttons.pug
 include /components/img-view.pug
 include /components/image.pug
 include /components/layer.pug
@@ -24,12 +24,13 @@ html(lang="en")
     meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(name="color-scheme" content="dark light")
-    
-    link(rel='preconnect' href='https://fonts.gstatic.com')
-    link(rel="stylesheet" href="/css/app.min.css" async)
+
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@900&family=Manrope:wght@500;600;800&family=Montserrat:wght@600;700;800&display=swap")
+    link(rel="stylesheet" href="/css/app.min.css")
 
     noscript
-      link(rel="stylesheet" href="/css/no-script.min.css" async)
+      link(rel="stylesheet" href="/css/no-script.min.css")
 
     link(rel="manifest", href="/manifest.json")
     link(type="text/plain" rel="author" href="/humans.txt")
@@ -70,8 +71,9 @@ html(lang="en")
 
     +back-to-top
 
-    block footer
-      +footer
+    footer(data-container).transition-fade
+      block footer
+        +footer
 
     script(src=`https://cdn.polyfill.io/v3/polyfill.min.js?features=default,es2015,es2016,es2017,fetch,smoothscroll,WebAnimations` async)
 
