--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -10,30 +10,23 @@ block pageInfo
     };
 
 block content
-  //- Intro layer
   .container-lg
-    +layout({
-      class: "layout-shorten layout-contain"
-    })
-      +main({
-        class: "py-large layout-clearfix"
-      })
-        h1.padding-y.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center Academic Publications.
-        +p
-          span.inline.margin-dull
-            ol
-              li O. Ojo, X. Lin, H. Lang, “A Threshold-Based Voltage Fault Detection Method Enabled by A Novel Neural Network Architecture for Lithium-ion Batteries” [Under Review]
+    h1.h4.font-800.style-center Academic Publications.
+    +p
+      span.inline.margin-dull
+        ol
+          li O. Ojo, X. Lin, H. Lang, “A Threshold-Based Voltage Fault Detection Method Enabled by A Novel Neural Network Architecture for Lithium-ion Batteries” [Under Review]
 
-              li O. Ojo, X. Lin, H. Lang, and Y. Kim, “A Recurrent Neural Networks Approach for Estimating the Core Temperature in Lithium-Ion Batteries”, Progress in Canadian Mechanical Engineering. Volume 3, Jun. 2020, doi: 10.32393/csme.2020.130
+          li O. Ojo, X. Lin, H. Lang, and Y. Kim, “A Recurrent Neural Networks Approach for Estimating the Core Temperature in Lithium-Ion Batteries”, Progress in Canadian Mechanical Engineering. Volume 3, Jun. 2020, doi: 10.32393/csme.2020.130
 
-              li O. Ojo, H. Lang, Y. Kim, X. Hu, B. Mu and X. Lin, "A Neural Network-Based Method for Thermal Fault Detection in Lithium-Ion Batteries”, in IEEE Transactions on Industrial Electronics, doi: 10.1109/TIE.2020.2984980
+          li O. Ojo, H. Lang, Y. Kim, X. Hu, B. Mu and X. Lin, "A Neural Network-Based Method for Thermal Fault Detection in Lithium-Ion Batteries”, in IEEE Transactions on Industrial Electronics, doi: 10.1109/TIE.2020.2984980
 
-              li J. Ojo, X. Lin and H. Lang, "Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots", CNKI.com, 2019. [Online]. Available:
-                span=" "
-                +link({
-                  href: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm",
-                  content: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm"
-                })(target="_blank" rel="noopener" title="The link to the publication for Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots.")
+          li 
+            | J. Ojo, X. Lin and H. Lang, "Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots", CNKI.com, 2019. [Online]. Available: 
+            +link({
+              href: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm",
+              content: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm"
+            })(target="_blank" rel="noopener")
 
   //- Next page layer
   +layout({
